# qrcode_detect_yolo

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/plans/: 01.md
src/qrcode_detector/: __init__.py  cli.py  config.py  dataset.py  dataset_build.py  detector.py  download.py  geometry.py  labelme.py  onnx_detector.py  server.py  source_split.py  synthetic.py  types.py
tests/: test_dataset.py  test_dataset_build.py  test_detector.py  test_download.py  test_geometry.py  test_labelme.py  test_onnx_detector.py  test_source_split.py  test_synthetic.py
